# RevCam

./: BOM.md  PRReadme.txt  README.md  pyproject.toml
.github/workflows/: action-checklist.yml
Printables/: Cam Plate.stl  Cam Stand.stl  Main Body.stl  Main Plate.stl  Switch Plate.stl  coverr.stl  placeholder.md
docs/: issues_action_plan.md  latency_improvement_tasks.md  surveillance_mode_spec.md  webrtc_rpi_throughput_review.md  webrtc_rpi_throughput_task_list.md
scripts/: generate_trailer_stl.py  install.sh  install_git_tools.sh  install_prereqs.sh  install_service.sh  measure_distance_overlay_latency.py  revcamctl.sh  run_with_sudo.sh
src/rev_cam/: __init__.py  app.py  battery.py  camera.py  config.py  diagnostics.py  distance.py  engineering.py  engineering_api.py  gy85.py  i2c_bus.py  image_adjustments.py  led_matrix.py  mdns.py  overlay_text.py  pipeline.py  power.py  recording.py  reversing_aids.py  sensor_fusion.py  sop.py  sop_api.py  streaming.py  system_log.py  trailer_leveling.py  version.py  video.py  video_encoding.py  webrtc.py  wifi.py
src/rev_cam/static/: index.html  leveling.html  settings.html  surveillance.html  (+3 more)
tests/: test_app.py  test_app_battery.py  test_app_camera.py  test_app_diagnostics.py  test_app_distance.py  test_app_led.py  test_app_reversing_aids.py  test_app_surveillance.py  test_app_wifi.py  test_battery.py  test_camera.py  test_config.py  test_diagnostics.py  test_distance.py  test_gy85.py  test_led_matrix.py  test_mdns.py  test_motion_detection.py  test_pipeline.py  test_power.py  test_recording_cleanup.py  test_recording_pts.py  test_reversing_aids.py  test_sensor_fusion.py  test_streaming.py  test_surveillance_api.py  test_surveillance_manager.py  test_surveillance_runtime.py  test_trailer_leveling.py  test_video.py  test_webrtc.py  test_webrtc_optional.py  test_wifi_nmcli.py  test_wifi_watchdog.py
tests/engineering/: conftest.py  test_dashboard.py  test_frontend.py  test_sop_work_centres.py  test_work_centres_api.py
(+12 files in other folders)
